replace string types with type model, add datetime, date, time, float, bigint and binary types